fixed issue on mobile view

--- a/src/app/component/timetable-root/mobile-appointment-view/mobile-appointment-view.component.less
+++ b/src/app/component/timetable-root/mobile-appointment-view/mobile-appointment-view.component.less
@@ -1,6 +1,7 @@
 
 
 .mobike-day-title{
+    color: white;
     margin: 0;
     text-align: center;
     margin-top: 2rem;
